Fixed pom.xml so that it's set properly for Java 15 preview features.
Fixed static for ZoneOffset for OffsetDateTime so that it will continue to work after Daylight Savings Time has ended.