@@ -62,6 +62,17 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>2.3.3.RELEASE</version>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <release>15</release>
+          <compilerArgs>
+            --enable-preview
+          </compilerArgs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
